--- a/src/components/Hero/styles.scss
+++ b/src/components/Hero/styles.scss
@@ -4,14 +4,11 @@
   color: white;
   font-weight: bold;
   border: 3px solid #f1f1f1;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   z-index: 2;
-  width: 80%;
+  width: 115%;
   padding: 20px;
   text-align: center;
+  margin-top: 1rem;
 }
 
 .hero__title {
